# WW-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
core/: CMakeLists.txt  ww_application.cpp  ww_application.h  ww_assert.h  ww_file_system.cpp  ww_file_system.h  ww_input.h  ww_key_code.h  ww_mouse_code.h  ww_random.h  ww_task_pool.cpp  ww_taskpool.h  ww_time_step.cpp  ww_time_step.h  ww_timer.cpp  ww_timer.h  ww_timestep.cpp  ww_uuid.cpp  ww_uuid.h
functions/: CMakeLists.txt
functions/event/: ww_event.cpp  ww_event.h  ww_event_dispatcher.cpp  ww_event_dispatcher.h  ww_key_event.cpp  ww_key_event.h  ww_mouse_event.cpp  ww_mouse_event.h  ww_window_event.cpp  ww_window_event.h
functions/imgui/: ww_imgui_layer.cpp  ww_imgui_layer.h
functions/layer/: ww_layer.cpp  ww_layer.h  ww_layer_stack.cpp  ww_layer_stack.h  ww_layerstack.cpp
functions/render/: ww_shader.cpp  ww_shader.h  ww_texture.cpp  ww_texture.h  ww_vertex_array.cpp  ww_vertex_array.h
platform/: CMakeLists.txt  platform_detection.h
platform/OpenGL/: ww_OpenGL_shader.cpp  ww_OpenGL_shader.h  ww_OpenGL_texture.cpp  ww_OpenGL_texture.h  ww_OpenGL_vertex_array.cpp  ww_OpenGL_vertex_array.h
platform/file_system/: ww_windows_file_system.cpp  ww_windows_file_system.h
platform/window/: ww_window.h  ww_window_base.cpp  ww_window_base.h  ww_window_input.cpp  ww_windows_window.cpp  ww_windows_window.h
resources/: CMakeLists.txt  ww_resource.cpp  ww_resource.h  ww_resource_register.cpp  ww_resource_register.h
source/: CMakeLists.txt
source/core/: CMakeLists.txt
source/core/assert/: w_assert.h
source/core/entry/: w_application.cpp  w_application.h
source/core/global/: w_key_code.h  w_mouse_code.h
source/core/interface/: w_event.h  w_event_base.cpp  w_event_base.h  w_layer_base.cpp  w_layer_base.h  w_window.cpp  w_window.h  w_window_base.cpp  w_window_base.h
source/core/log/: w_log.cpp  w_log.h
source/core/math/: w_math.h
source/core/meta/: w_json.h
source/core/meta/reflection/: w_reflection.h
source/core/meta/serializer/: w_serializer.h
source/core/random/: w_random.h
source/core/time/: w_time.cpp  w_time.h  w_time_step.cpp  w_time_step.h  w_timer.cpp  w_timer.h
source/core/uuid/: w_uuid.cpp  w_uuid.h
source/function/: CMakeLists.txt
source/function/event/: w_event.cpp  w_event.h  w_event_dispatcher.cpp  w_event_dispatcher.h  w_key_event.cpp  w_key_event.h  w_mouse_event.cpp  w_mouse_event.h  w_window_event.cpp  w_window_event.h
source/function/imgui/: w_imgui.h  w_imgui_layer.cpp  w_imgui_layer.h
source/function/input/: w_input.cpp
source/function/layer/: w_layer.cpp  w_layer.h  w_layer_stack.cpp  w_layer_stack.h
source/function/render/: w_camera.cpp  w_camera.h  w_shader.cpp  w_shader.h  w_texture.cpp  w_texture.h
source/platform/: CMakeLists.txt  w_platform.h
source/platform/file_system/: w_file_system.cpp  w_file_system.h
source/platform/window/: w_input.h  w_window.h  w_window_base.cpp  w_window_base.h  w_windows_input.cpp  w_windows_window.cpp  w_windows_window.h
source/resource/: CMakeLists.txt
source/resource/resource_manager/: w_resource_manager.cpp
test/: CMakeLists.txt  cube.cpp  cube.h  main.cpp  main_window.cpp  main_window.h  mainlayer.cpp  mainlayer.h  mainwindow.cpp  mainwindow.h  object_layer.cpp  object_layer.h  sky_layer.cpp  sky_layer.h  skybox.cpp  skybox.h  test.cpp
test/assets/shader/: cube.fs  cube.vs
test/assets/shader/cube/: cube1.fs  cube1.vs  cube2.fs  cube2.vs
test/model/: cube.cpp  cube.h
